--- a/ariExpressDjango/mainApp/templates/store_specific.html
+++ b/ariExpressDjango/mainApp/templates/store_specific.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -18,9 +17,8 @@
       width: 25%;
   }
 </style>
-  
-  <body>
 
+<body>
     <h1 class="specialh1">{{ storename }} - {{ active }}</h1>
     <br>
     <table class="table table-hover">
@@ -33,42 +31,49 @@
           <th>Actions</th>
       </tr>
 
-      {% for product_id, product in products.items %}
+      {% if products.items %}
+        {% for product_id, product in products.items %}
+          <tr>
+              <td>{{ product.product_id }}</td>
+              <td>{{ product.name }}</td>
+              <td>{{ product.quantity }}</td>
+              <td>{{ product.price }}</td>
+              <td>{{ product.categories }}</td>
+              <td>
+                <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                  {% if "ProductChange" in permissions %}
+                  <form method="post" action="{% url 'mainApp:editProduct' storename %}">
+                      {% csrf_token %}
+                      <input type="hidden" name="product_id" value="{{ product.product_id }}">
+                      <input type="hidden" name="product_name" value="{{ product.name }}">
+                      <input type="hidden" name="product_quantity" value="{{ product.quantity }}">
+                      <input type="hidden" name="product_price" value="{{ product.price }}">
+                      <input type="hidden" name="product_categories" value="{{ product.categories }}">
+                      <button type="submit" class="btn btn-outline-dark" name="openEditProduct">Edit</button>
+                  </form>
+                  {% endif %}
+                  {% if "ProductChange" in permissions %}
+                  <form method="post" action="{% url 'mainApp:store_specific' storename %}">
+                      {% csrf_token %}
+                      <input type="hidden" name="product_id" value="{{ product.product_id }}">
+                      <button type="submit" class="btn btn-outline-dark" name="removeProduct">Remove</button>
+                  </form>
+                  {% endif %}
+                  <form method="post" action="#">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-outline-dark" name="addToCart">Add to cart</button>
+                  </form>
+                </div>
+              </td>
+          </tr>
+        {% endfor %}
+      {% else %}
         <tr>
-            <td>{{ product.product_id }}</td>
-            <td>{{ product.name }}</td>
-            <td>{{ product.quantity }}</td>
-            <td>{{ product.price }}</td>
-            <td>{{ product.categories }}</td>
-            <td>
-              <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                {% if "ProductChange" in permissions %}
-                <form method="post" action="{% url 'mainApp:editProduct' storename %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="product_id" value="{{ product.product_id }}">
-                    <input type="hidden" name="product_name" value="{{ product.name }}">
-                    <input type="hidden" name="product_quantity" value="{{ product.quantity }}">
-                    <input type="hidden" name="product_price" value="{{ product.price }}">
-                    <input type="hidden" name="product_categories" value="{{ product.categories }}">
-                    <button type="submit" class="btn btn-outline-dark" name="openEditProduct">Edit</button>
-                </form>
-                {% endif %}
-                {% if "ProductChange" in permissions %}
-                <form method="post" action="{% url 'mainApp:store_specific' storename %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="product_id" value="{{ product.product_id }}">
-                    <button type="submit" class="btn btn-outline-dark" name="removeProduct">Remove</button>
-                </form>
-                {% endif %}
-                <form method="post" action="#">
-                  {% csrf_token %}
-                  <button type="submit" class="btn btn-outline-dark" name="addToCart">Add to cart</button>
-                </form>
-              </div>
-            </td>
+          <td colspan="6">No products in this store yet.</td>
         </tr>
-      {% endfor %}
+      {% endif %}
     </table>
+
     <br>
     <div class="d-flex justify-content-start">
       {% if "ModifyPermissions" in permissions %}
@@ -92,7 +97,7 @@
       {% if "ProductChange" in permissions %}
       <form method="post" action="{% url 'mainApp:addNewProduct' storename %}">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary me-2">Add new product</button>
+        <button type="submit" class="btn btn-primary me-2" name="openAddNewProduct">Add new product</button>
       </form>
       {% endif %}
       {% if "Discounts" in permissions %}
@@ -102,5 +107,5 @@
       </form>
       {% endif %}
     </div>
-    </body>
+</body>
 {% endblock %}
