--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -80,6 +80,10 @@
         {% csrf_token %}
         <button type="submit" class="btn btn-primary me-2">Add new discount</button>
       </form>
+      <form method="post" action="{% url 'mainApp:viewDiscounts' storename %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary me-2">View discounts</button>
+      </form>
     </div>
     </body>
 {% endblock %}
