adding search bar functionality (search by name) and starting to create product page for add to cart functionality - NOT DONE YET!!! for issue #264

--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -79,9 +79,10 @@
                         </li>
                         {% endif %}
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 nav-search-form" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    <form class="d-flex" method="POST" role="search" action="{% url 'mainApp:searchpage' %}">
+                        {% csrf_token %}
+                        <input class="form-control me-2 nav-search-form" type="search" placeholder="I'm looking for..." aria-label="Search" name ="searched">
+                        <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
                     </form>
                 </div>
             </div>
