--- a/ariExpressDjango/templates/base.html
+++ b/ariExpressDjango/templates/base.html
@@ -7,6 +7,8 @@
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
+    {% load static %}
+    <script src="{% static 'ariExpressDjango/ariExpressDjango/static/notification.js' %}"></script>
 
 </head>
 <head>
