adding  ad to cart functionality to store_specific for issue #264

--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -8,7 +8,7 @@
 <body>
 	<main>
 		<br>
-		<h1>Inbox</h1>
+		<h1 style="text-align:center; font-size:300%;">Inbox <i class="fa-regular fa-envelope-open"></i></h1>
 		<br><br>
 		<!--Table of messages-->
 		<div class = "col-lg-12 hide">
