view staff now works

--- a/ariExpressDjango/mainApp/templates/store_specific.html
+++ b/ariExpressDjango/mainApp/templates/store_specific.html
@@ -128,6 +128,12 @@ button.addtocart-btn:hover , button.addtocart-btn:active{
         <button type="submit" class="btn btn-primary me-2">View discounts</button>
       </form>
       {% endif %}
+      {% if "StaffInfo" in permissions %}
+      <form method="post" action="{% url 'mainApp:viewStoreStaff' storename %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary me-2">View Store Staff</button>
+      </form>
+      {% endif %}
     </div>
 </body>
 {% endblock %}
