--- a/ariExpressDjango/mainApp/templates/viewStoreStaff.html
+++ b/ariExpressDjango/mainApp/templates/viewStoreStaff.html
@@ -22,6 +22,7 @@
               <th>Username</th>
               <th>Role</th>
               <th>Nominated By</th>
+              <th>Actions</th>
           </tr>
       </thead>
       <tbody>
@@ -30,6 +31,13 @@
               <td>{{ item.user.username }}</td>
               <td>{{ item.role }}</td>
               <td>{{ item.nominated_by_username }}</td>
+              <td>
+                <form method="post" action="{% url 'mainApp:viewStoreStaff' storename %}">
+                  {% csrf_token %}
+                  <input type="hidden" name="to_remove_id" value="{{ item.user.username }}">
+                  <button type="submit" class="btn btn-outline-dark" name="removeAccessButton">Remove Access</button>
+                </form>
+              </td>
           </tr>
           {% endfor %}
       </tbody>
